--- a/links/input.css
+++ b/links/input.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 /* Import Google font - Poppins */
 * {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 @layer components{
